fix: remove background-attachment fixed to prevent rendering glitches on mobile

--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -8,7 +8,9 @@
     background-image: url('/pattern.svg');
     background-repeat: repeat;
     background-size: 400px 400px;
-    background-attachment: fixed;
+    /* Removed background-attachment: fixed - causes rendering glitches on mobile */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
   }
 
   h1,
